// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum ContainerawsClusterControlPlaneRootVolumeVolumeTypeEnum {
  ContainerawsClusterControlPlaneRootVolumeVolumeTypeEnumNO_VALUE_DO_NOT_USE = 0;
  ContainerawsClusterControlPlaneRootVolumeVolumeTypeEnumVOLUME_TYPE_UNSPECIFIED = 1;
  ContainerawsClusterControlPlaneRootVolumeVolumeTypeEnumGP2 = 2;
  ContainerawsClusterControlPlaneRootVolumeVolumeTypeEnumGP3 = 3;
}

enum ContainerawsClusterControlPlaneMainVolumeVolumeTypeEnum {
  ContainerawsClusterControlPlaneMainVolumeVolumeTypeEnumNO_VALUE_DO_NOT_USE = 0;
  ContainerawsClusterControlPlaneMainVolumeVolumeTypeEnumVOLUME_TYPE_UNSPECIFIED = 1;
  ContainerawsClusterControlPlaneMainVolumeVolumeTypeEnumGP2 = 2;
  ContainerawsClusterControlPlaneMainVolumeVolumeTypeEnumGP3 = 3;
}

enum ContainerawsClusterStateEnum {
  ContainerawsClusterStateEnumNO_VALUE_DO_NOT_USE = 0;
  ContainerawsClusterStateEnumSTATE_UNSPECIFIED = 1;
  ContainerawsClusterStateEnumPROVISIONING = 2;
  ContainerawsClusterStateEnumRUNNING = 3;
  ContainerawsClusterStateEnumRECONCILING = 4;
  ContainerawsClusterStateEnumSTOPPING = 5;
  ContainerawsClusterStateEnumERROR = 6;
  ContainerawsClusterStateEnumDEGRADED = 7;
}

enum ContainerawsClusterBinaryAuthorizationEvaluationModeEnum {
  ContainerawsClusterBinaryAuthorizationEvaluationModeEnumNO_VALUE_DO_NOT_USE = 0;
  ContainerawsClusterBinaryAuthorizationEvaluationModeEnumDISABLED = 1;
  ContainerawsClusterBinaryAuthorizationEvaluationModeEnumPROJECT_SINGLETON_POLICY_ENFORCE = 2;
}

message ContainerawsCluster {
  string name = 1;
  string description = 2;
  ContainerawsClusterNetworking networking = 3;
  string aws_region = 4;
  ContainerawsClusterControlPlane control_plane = 5;
  ContainerawsClusterAuthorization authorization = 6;
  ContainerawsClusterStateEnum state = 7;
  string endpoint = 8;
  string uid = 9;
  bool reconciling = 10;
  string create_time = 11;
  string update_time = 12;
  string etag = 13;
  map<string, string> annotations = 14;
  ContainerawsClusterWorkloadIdentityConfig workload_identity_config = 15;
  string project = 16;
  string location = 17;
  ContainerawsClusterFleet fleet = 18;
  ContainerawsClusterBinaryAuthorization binary_authorization = 19;
}

message ContainerawsClusterNetworking {
  string vpc_id = 1;
  repeated string pod_address_cidr_blocks = 2;
  repeated string service_address_cidr_blocks = 3;
  bool per_node_pool_sg_rules_disabled = 4;
}

message ContainerawsClusterControlPlane {
  string version = 1;
  string instance_type = 2;
  ContainerawsClusterControlPlaneSshConfig ssh_config = 3;
  repeated string subnet_ids = 4;
  ContainerawsClusterControlPlaneConfigEncryption config_encryption = 5;
  repeated string security_group_ids = 6;
  string iam_instance_profile = 7;
  ContainerawsClusterControlPlaneRootVolume root_volume = 8;
  ContainerawsClusterControlPlaneMainVolume main_volume = 9;
  ContainerawsClusterControlPlaneDatabaseEncryption database_encryption = 10;
  map<string, string> tags = 11;
  ContainerawsClusterControlPlaneAwsServicesAuthentication aws_services_authentication = 12;
  ContainerawsClusterControlPlaneProxyConfig proxy_config = 13;
}

message ContainerawsClusterControlPlaneSshConfig {
  string ec2_key_pair = 1;
}

message ContainerawsClusterControlPlaneConfigEncryption {
  string kms_key_arn = 1;
}

message ContainerawsClusterControlPlaneRootVolume {
  int64 size_gib = 1;
  ContainerawsClusterControlPlaneRootVolumeVolumeTypeEnum volume_type = 2;
  int64 iops = 3;
  int64 throughput = 4;
  string kms_key_arn = 5;
}

message ContainerawsClusterControlPlaneMainVolume {
  int64 size_gib = 1;
  ContainerawsClusterControlPlaneMainVolumeVolumeTypeEnum volume_type = 2;
  int64 iops = 3;
  int64 throughput = 4;
  string kms_key_arn = 5;
}

message ContainerawsClusterControlPlaneDatabaseEncryption {
  string kms_key_arn = 1;
}

message ContainerawsClusterControlPlaneAwsServicesAuthentication {
  string role_arn = 1;
  string role_session_name = 2;
}

message ContainerawsClusterControlPlaneProxyConfig {
  string secret_arn = 1;
  string secret_version = 2;
}

message ContainerawsClusterAuthorization {
  repeated ContainerawsClusterAuthorizationAdminUsers admin_users = 1;
  repeated ContainerawsClusterAuthorizationAdminGroups admin_groups = 2;
}

message ContainerawsClusterAuthorizationAdminUsers {
  string username = 1;
}

message ContainerawsClusterAuthorizationAdminGroups {
  string group = 1;
}

message ContainerawsClusterWorkloadIdentityConfig {
  string issuer_uri = 1;
  string workload_pool = 2;
  string identity_provider = 3;
}

message ContainerawsClusterFleet {
  string project = 1;
  string membership = 2;
}

message ContainerawsClusterBinaryAuthorization {
  ContainerawsClusterBinaryAuthorizationEvaluationModeEnum evaluation_mode = 1;
}

message ApplyContainerawsClusterRequest {
  ContainerawsCluster resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteContainerawsClusterRequest {
  string service_account_file = 1;
  ContainerawsCluster resource = 2;
}

message ListContainerawsClusterRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListContainerawsClusterResponse {
  repeated ContainerawsCluster items = 1;
}

service ContainerawsClusterService {
  rpc ApplyContainerawsCluster(ApplyContainerawsClusterRequest) returns (ContainerawsCluster);
  rpc DeleteContainerawsCluster(DeleteContainerawsClusterRequest) returns (google.protobuf.Empty);
  rpc ListContainerawsCluster(ListContainerawsClusterRequest) returns (ListContainerawsClusterResponse);
}
